fixing alignment of import/export buttons on tablets

--- a/src/styles/utility/_variables.scss
+++ b/src/styles/utility/_variables.scss
@@ -9,3 +9,4 @@ $info-color: #36a4ff;
 $border-radius: 5px;
 
 $mobile-width: 768px;
+$tablet-width: 992px;
